# 3d-gaussian-scratch

./: .gitignore  README.md  cuda.ipynb  differentiable.ipynb  main.ipynb  pyproject.toml  setup.py
docs/images/: colmap_frame_00001.json  gaussian_points_00001.json
src/: gaussian.py
src/cuda_backend/: CMakeLists.txt  __init__.py  bindings.cpp  test.cu
utils/: colmap_data.py  colmap_utils.py  download.py  matrix.py  plot_utils.py
